[package]
name = "sirpingsalot"
version = "0.1.0"
authors = ["Steve <stevemflanagan@gmail.com>"]
edition = "2024"
rust-version = "1.85"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name="rawls"
path="src/raw_listen.rs"

[profile.release]
debug = false
lto = true
codegen-units=1
opt-level = 3
#panic = 'abort'  # does cleanup upon panics
#trustflags = ["-C", "target-cpu=native"]

[dependencies]
log = "0.4"
env_logger = "0.11"
humantime = "2"
anyhow = "1"
rand = "0.9"
socket2 = { version = "0.5", features = ["all"] }
clap = { version = "4", features = ["derive"] }
tabular = "0.2"
ctrlc = { version = "3", features = ["termination"] }